# hw10

./: pyproject.toml
quotes/members/: views.py
quotes/members/templates/authenticate/: login.html  register_user.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/registration/: login.html
quotes/users/templates/users/: login.html  logout.html  signup.html
quotes/website/: models.py  urls.py  views.py
quotes/website/templates/website/: base.html  index.html
