[tool.poetry]
name = "hw10"
version = "0.1.0"
description = "Quotes from great people"
authors = ["Yurii Protsenko <elsoul@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
Django = "^5.0.2"
Scrapy = "^2.11.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
